--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Software-Artists/museum-Backend#readme",
   "dependencies": {
     "axios": "^0.21.4",
+    "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
